--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.9",
-        "laravel/socialite": "*",
+        "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
